--- a/app/index.html
+++ b/app/index.html
@@ -36,9 +36,15 @@ current: index
   <form class="bookingSearch">
     <div class="form-row">
       <div class="col-12 col-lg-3 mb-3 mb-lg-0">
-        <input type="text" class="form-control" placeholder="Destination" />
+        <i class="material-icons">location_on</i>
+        <input
+          type="text"
+          class="form-control booking-dest"
+          placeholder="Destination"
+        />
       </div>
       <div class="col-12 col-lg-3 mb-3 mb-lg-0">
+        <i class="material-icons">date_range</i>
         <input
           type="text"
           class="form-control"
@@ -46,6 +52,7 @@ current: index
         />
       </div>
       <div class="col-12 col-lg-3 mb-3 mb-lg-0">
+        <i class="material-icons">person</i>
         <input type="text" class="form-control" placeholder="Guests" />
       </div>
       <div class="col-12 col-lg-3 mb-3 mb-lg-0">
